--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "POS",
-  "version": "1.1.0.32-bit",
+  "version": "1.1.1-32-bit",
   "description": "Point of sale",
   "author": "abdenour",
   "main": "./src/start.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abdenour-progdes/POS.git"
+    "url": "https://github.com/abdenour-progdes/POS-32.git"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "electron": "^10.4.7",
+    "electron": "^15.2.0",
     "electron-builder": "^22.11.7",
     "electron-is-dev": "^2.0.0",
     "nodemon": "^2.0.12"
