--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "POS",
-  "version": "1.1.1-32-bit",
-  "description": "Point of sale",
+  "name": "RestauPOS",
+  "version": "1.1.0-32-bit",
+  "description": "Restaurant POS",
   "author": "abdenour",
   "main": "./src/start.js",
   "build": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abdenour-progdes/POS-32.git"
+    "url": "https://github.com/abdenour-progdes/restaurant-pos.git"
   },
   "dependencies": {
     "@electron/remote": "^2.0.1",
@@ -44,7 +44,7 @@
   "scripts": {
     "electron": "cross-env NODE_ENV=dev nodemon --exec \"\"electron .\"\"",
     "build": "electron-builder build  --win --publish never",
-    "deploy": "electron-builder build  --win --ia32 --publish always"
+    "deploy": "electron-builder build  --win  --publish always"
   },
   "browserslist": {
     "production": [
